# kitabae

./: README.md
category-theory/: ch1.js  ch2.js  ch3.md  ctfp.aux  ctfp.fdb_latexmk  ctfp.fls  ctfp.tex  notes.md
eloquent-javascript/: 03-functions.js  06-secret-objects.js  08-bugs-errors.js  09-regex.js  10-modules.js  11-async.js  ch12-language.js  ch2-program-structure.js  ch4-objects-arrays.js  ch5-higher-order-fun.js  ch6-secret-objects.js  ch7-robot-proj*.js
haskell-programming/: 01-lambda.md  02-basics.hs  03-strings.hs  05-types.hs  06-typeclass.hs  07-funky.hs  09-list.hs  11-ADT.hs  12-Adversity.hs  13-projects.hs  15-monoid.hs  ch1-lambda.md  ch10-folds.hs  ch2-basics.hs  ch4-datatypes.hs  ch8-recursion.hs  ch9-list.hs  tutorial.md
haskell-programming/Ch13/: CHANGELOG.md  Ch13.cabal
haskell-programming/Ch13/app/: Main.hs
haskell-programming/Ch13/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-programming/Ch14/: Addition.hs  CHANGELOG.md  Ch14.cabal
haskell-programming/Ch14/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell-programming/Ch14/dist-newstyle/packagedb/ghc-9.8.1/: Ch14-0.1.0.0-inplace.conf  package.cache
haskell-programming/proj/: CHANGELOG.md  proj.cabal
haskell-programming/proj/dist-newstyle/cache/: compiler  config  solver-plan  source-hashes
haskell-programming/proj/src/: Main.hs  Morse.hs
prog-in-hask/: ch4.hs  ch8-taut.hs
programming-haskell/: ch3.hs  ch5.hs  ch7*.hs  ch8*.hs  ch9*.hs
programming-in-haskell/: 01-intro.hs  01X-intro.hs  02-basics.hs  02X-basics.hs  03-types-classes.hs  04-functions.hs  05-lists.hs  06-recursion.hs  06X-recursion.hs  07-HOFs.hs  07X-HOFs.hs  08-type-declarations.hs  09-countdown.hs  10-hangman.hs  10-interactive.hs  10-life.hs  10-nim.hs  11-tictactoe.hs  12-monads.hs  Countdown.hs  GameOfLife.hs  Hangman.hs  Nim.hs  (+3 more)
(+183 files in other folders)
