cabal-version:      2.4
name:               Ch13
version:            0.1.0.0
synopsis:           hangman game
author:             Syed Khalid
extra-source-files: CHANGELOG.md,
                    ./data/words.txt

executable Ch13
    main-is:          Main.hs
    other-modules:    Hangman
    -- other-extensions:
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    base ^>=4.19.0.0,
                      random,
                      split

