cabal-version:      2.4
name:               Ch14
version:            0.1.0.0
author:             Syed Khalid
maintainer:         magmastar167@gmail.com

extra-source-files: CHANGELOG.md

executable Ch14
    main-is:          Main.hs

    -- other-modules:

    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:    base ^>=4.19.0.0 ,
                      hspec

library
  hs-source-dirs:   .
  exposed-modules:  Addition 
  default-language: Haskell2010
  build-depends:    base ^>=4.19.0.0 ,
                    hspec,
                    QuickCheck


