cabal-version:      2.4
name:               proj
version:            0.1.0.0
author:             Syed Khalid
maintainer:         magmastar167@gmail.com
extra-source-files: CHANGELOG.md

common all 
    default-language: Haskell2010
    build-depends:    base ^>=4.19.0.0, 
                      containers, 
                      morse,
                      QuickCheck
    ghc-options:      -Wall 

library 
    import: all
    exposed-modules:    Morse
    ghc-options:        -Wall 
    hs-source-dirs:   src

executable Morse
    import: all
    main-is:          Main.hs
    hs-source-dirs:   src

test-suite tests 
    import: all 
    type:   exitcode-stdio-1.0
    main-is: test.hs 
    hs-source-dirs: tests
